--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,11 +3,13 @@
 @import 'buttons.css';
 @import 'recipe.css';
 @import 'ingredients-list.css';
+@import 'recipe-edit.css';
 
 
 
 *, *::before, *::after {
   font-family: 'Ariel',  serif;
+  box-sizing: border-box;
 }
 html {
   font-size: 25px;
